# projekt-ai-kategoryzator

./: README.md  REPORT.md  pyproject.toml
app/: data_loader.py  decision_tree.py  main.py
data/: new_transactions.csv  transactions.csv
tests/: test_decision_tree.py
