[project]
name = "expense-categorizer"
description = "Automatyczna kategoryzacja wydatków z użyciem własnej implementacji drzewa decyzyjnego"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
]
readme = "README.md"
license = { file = "LICENSE.md" }

[project.urls]
"Homepage" = "https://github.com/mgrzyywacz/projekt-ai-kategoryzator"
"Source" = "https://github.com/mgrzyywacz/projekt-ai-kategoryzator"

[project.scripts]
categorize = "app.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report xml:coverage.xml --cov-report term"
testpaths = ["tests"]
pythonpath = "."

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "alembic/*",
]

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E", "F", "B", "Q", "I", "S", "N", "A", "FAST", "C4", "LOG", "RET", "SIM", "C90",
]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
"**/{tests,docs,tools}/*" = ["E402", "S101"]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
